--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ plugins {
     id "com.github.ben-manes.versions" version "0.28.0"
     id "org.sonarqube" version "2.8"
     id "com.github.spotbugs" version "4.0.4"
+    id "io.qameta.allure" version "2.8.1"
 }
 
 apply from: rootProject.file("gradle/code-quality.gradle")
@@ -18,7 +19,7 @@ group = "com.tomash.gombosh.api"
 version = "1.0.0"
 description = "Java + Google Guice + Retrofit2 + Gradle + Junit5 API test demo "
 
-sourceCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 ext {
     encoding = StandardCharsets.UTF_8.toString()
@@ -50,25 +51,27 @@ tasks.withType(SpotBugsTask).configureEach {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
     api("org.apache.logging.log4j:log4j-api:$log4j2Version")
     api("com.squareup.retrofit2:retrofit:$retrofit2Version")
     api("com.google.inject:guice:4.2.3")
+    api("com.devskiller:jfairy:0.6.3")
+    compile("org.apache.commons:commons-lang3:3.11")
     compileOnly("org.projectlombok:lombok:$lombokVersion")
     compileOnly("com.github.spotbugs:spotbugs-annotations:$spotbugVersion")
     implementation("com.squareup.retrofit2:converter-gson:$retrofit2Version")
     implementation("com.squareup.okhttp3:logging-interceptor:4.4.1")
-    testImplementation("org.junit.jupiter:junit-jupiter:5.6.1")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
     testImplementation("org.assertj:assertj-core:3.15.0")
     testImplementation("com.squareup.retrofit2:retrofit-mock:$retrofit2Version")
     testRuntimeOnly("org.apache.logging.log4j:log4j-core:$log4j2Version")
     testRuntimeOnly("org.apache.logging.log4j:log4j-jul:$log4j2Version")
     testRuntimeOnly("org.apache.logging.log4j:log4j-slf4j-impl:$log4j2Version")
+    testRuntimeOnly("io.qameta.allure:allure-junit5:2.13.5")
 }
 
 test {
@@ -85,6 +88,11 @@ test {
     maxParallelForks = (int) (Runtime.runtime.availableProcessors().intdiv(2) ?: 1)
 }
 
+allure {
+    version = '2.10.0'
+    downloadLinkFormat = 'https://dl.bintray.com/qameta/maven/io/qameta/allure/allure-commandline/%s/allure-commandline-%<s.zip'
+}
+
 wrapper {
-    gradleVersion = "6.3"
+    gradleVersion = "6.6"
 }
