--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,6 @@ plugins {
     id "java-library"
     id "checkstyle"
     id "pmd"
-    id "jacoco"
-    id "com.github.ben-manes.versions" version "0.28.0"
-    id "org.sonarqube" version "2.8"
     id "com.github.spotbugs" version "4.0.4"
     id "io.qameta.allure" version "2.8.1"
 }
@@ -45,8 +42,8 @@ spotbugs {
 
 tasks.withType(SpotBugsTask).configureEach {
     reports {
-        xml.enabled = false
-        html.enabled = true
+        xml.enabled = true
+        html.enabled = false
     }
 }
 
